--- a/Front-end/Css/global.css
+++ b/Front-end/Css/global.css
@@ -1,28 +1,71 @@
-*{
-    max-width: 1440px;
-    margin: 0;
-    padding: 0;
+* {
+  max-width: 1440px;
+  margin: 0;
+  padding: 0;
 }
 
-.logoPrincipal{
-width: 50px;
-height: 50px;
+.logoPrincipal {
+  width: 50px;
+  height: 50px;
 }
-main{
-    margin-left: 100px;
+main {
+  margin-left: 100px;
   margin-right: 100px;
 }
-.header-logo{
-    display: flex;
-    margin-top: 46px;
+.header-logo {
+  display: flex;
+  margin-top: 46px;
 }
 
-.header-titre{
-    text-align: center;
-    color: #D04F4F;
+.header-titre {
+  text-align: center;
+  color: #d04f4f;
+  font-weight: 700;
+}
+
+.inputSearch {
+  background-color: blueviolet;
+}
+
+article{
+    max-width: 380px;
+    max-height: 364px;
+}
+
+.imgArticle{
+    width: 380px;
+    height: 178px;
+    background-color: #C7BEBE;
+}
+.txtArticle{
+    background-color: #E7E7E7;
+}
+
+.nomMenu{
+    font-size: 18px;
+    font-weight: 400;
+}
+.timeMenu{
+    font-size: 18px;
     font-weight: 700;
+    align-items: center;
+}
+ul li{
+    list-style: none;
+    padding-left: 0px;
+
+}
+.list{
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 14.4px;
 }
 
-.inputSearch{
-    background-color: blueviolet;
+.qte{
+    font-weight: 400;
+}
+.recette{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 12px;
 }
