--- a/Css/global.css
+++ b/Css/global.css
@@ -26,7 +26,7 @@ main {
 .inputSearch {
   background-color: blueviolet;
 }
-.section {
+#section {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
