--- a/Css/global.css
+++ b/Css/global.css
@@ -3,15 +3,17 @@
   margin: 0;
   padding: 0;
 }
-test
-.logoPrincipal {
+
+test .logoPrincipal {
   width: 50px;
   height: 50px;
 }
+
 main {
   margin-left: 100px;
   margin-right: 100px;
 }
+
 .header-logo {
   display: flex;
   margin-top: 46px;
@@ -26,12 +28,14 @@ main {
 .inputSearch {
   background-color: blueviolet;
 }
+
 #section {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
 article {
   max-width: 30%;
   max-height: 364px;
@@ -44,6 +48,7 @@ article {
   height: 178px;
   background-color: #c7bebe;
 }
+
 .txtArticle {
   background-color: #e7e7e7;
   padding: 1rem !important;
@@ -56,17 +61,21 @@ article {
   display: flex;
   align-content: center;
 }
+
 .timeMenu {
   font-size: 18px;
   font-weight: 700;
   align-items: center;
 }
+
 .timePreparation {
   margin-left: 5px;
 }
+
 ul li {
   list-style: none;
 }
+
 .list {
   font-size: 12px;
   font-weight: 700;
@@ -76,6 +85,7 @@ ul li {
 .qte {
   font-weight: 400;
 }
+
 .recette {
   font-weight: 400;
   font-size: 12px;
@@ -93,9 +103,11 @@ ul li {
   display: flex;
   width: 100%;
 }
+
 .divUl {
   width: 50%;
 }
+
 .prepa {
   width: 50%;
   height: 6rem;
@@ -105,6 +117,7 @@ ul li {
 .ulList {
   padding-left: 0rem !important;
 }
+
 .quantity {
   font-weight: 400;
 }
